varargs check refactored